@@ -5,16 +5,13 @@ SPDX-License-Identifier: EPL-2.0
 package org.eclipse.sw360.rest.resourceserver.filter;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.BiPredicate;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import jakarta.servlet.FilterChain;
@@ -24,103 +21,89 @@ import jakarta.servlet.http.HttpServletResponse;
 
 import lombok.NonNull;
 import org.eclipse.sw360.datahandler.common.CommonUtils;
-import org.eclipse.sw360.datahandler.thrift.users.User;
-import org.eclipse.sw360.datahandler.thrift.users.UserGroup;
+import org.eclipse.sw360.datahandler.permissions.PermissionUtils;
 import org.eclipse.sw360.rest.resourceserver.core.RestControllerHelper;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Component;
-import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.filter.OncePerRequestFilter;
-
 
 @Component
 public class EndpointsFilter extends OncePerRequestFilter {
 
-    @Value("${blacklist.sw360.rest.api.endpoints}")
-    String endpointsTobeBlackListed;
+    private static final Set<String> WRITE_METHODS = Set.of("POST", "PATCH", "PUT", "DELETE");
 
-    @NonNull
-    private final RestControllerHelper restControllerHelper;
+    private final Map<Pattern, Set<String>> endpointHttpMethods;
+    private final RestControllerHelper<?> restControllerHelper;
 
-    public EndpointsFilter(RestControllerHelper restControllerHelper) {
+    public EndpointsFilter(@NonNull RestControllerHelper<?> restControllerHelper,
+            @Value("${blacklist.sw360.rest.api.endpoints:}") String endpointsTobeBlackListed) {
         this.restControllerHelper = restControllerHelper;
+        this.endpointHttpMethods = parseEndpointHttpMethods(endpointsTobeBlackListed);
     }
-
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
             throws ServletException, IOException {
 
-        String requestURI = request.getRequestURI();
-        String method = request.getMethod();
-        String[] endpointMethodPairs = endpointsTobeBlackListed.split(",");
-        Map<String, Set<String>> endpointHttpMethods = getMapOfEndpointToHttpMethods(endpointMethodPairs);
-        boolean isAMatch = verifyMatchingOfRequestURIToEndpoints(requestURI, endpointHttpMethods);
-
-        if (Arrays.asList("POST", "PATCH", "PUT", "DELETE").contains(method) && !isAMatch) {
-            User user = restControllerHelper.getSw360UserFromAuthentication();
-
-            // Inline check for Security User role having read only access
-            if (user.getUserGroup().name().equals("SECURITY_USER")) {
-                response.sendError(HttpStatus.SERVICE_UNAVAILABLE.value());
-            } else {
-                filterChain.doFilter(request, response);
+        Optional<Entry<Pattern, Set<String>>> matchedEndpoint = findMatchingEndpoint(request.getRequestURI());
+        if (matchedEndpoint.isEmpty()) {
+            if (isWriteMethod(request.getMethod()) && PermissionUtils.isSecurityUser(restControllerHelper.getSw360UserFromAuthentication())) {
+                sendServiceUnavailable(response);
+                return;
             }
-        } else if (!isAMatch) {
             filterChain.doFilter(request, response);
-        } else {
-            Set<String> httpMethodsToBeBlocked = new HashSet<>();
-            Optional<Entry<String, Set<String>>> matchedEndpointToHttpMethods = endpointHttpMethods.entrySet().stream().filter(es -> {
-                String endpointURI = es.getKey();
-                return getRequestURIMatcher().test(endpointURI, requestURI);
-            }).findFirst();
-            if (matchedEndpointToHttpMethods.isPresent()) {
-                httpMethodsToBeBlocked = matchedEndpointToHttpMethods.get().getValue();
-            }
-            if (CommonUtils.isNullOrEmptyCollection(httpMethodsToBeBlocked)) {
-                response.sendError(HttpStatus.SERVICE_UNAVAILABLE.value());
-            } else {
-                if (httpMethodsToBeBlocked.contains(method)) {
-                    response.sendError(HttpStatus.SERVICE_UNAVAILABLE.value());
-                } else {
-                    filterChain.doFilter(request, response);
-                }
-            }
+            return;
         }
+
+        Set<String> blockedMethods = matchedEndpoint.get().getValue();
+        if (CommonUtils.isNullOrEmptyCollection(blockedMethods)
+                || blockedMethods.contains(request.getMethod().toUpperCase(Locale.ROOT))) {
+            sendServiceUnavailable(response);
+            return;
+        }
+
+        filterChain.doFilter(request, response);
     }
 
-    private boolean verifyMatchingOfRequestURIToEndpoints(String requestURI,
-            Map<String, Set<String>> endpointHttpMethods) {
-        long count = endpointHttpMethods.entrySet().stream().filter(es -> {
-            return getRequestURIMatcher().test(es.getKey(), requestURI);
-        }).count();
-        return count != 0;
+    private boolean isWriteMethod(String method) {
+        return WRITE_METHODS.contains(method.toUpperCase(Locale.ROOT));
     }
 
-    private Map<String, Set<String>> getMapOfEndpointToHttpMethods(String[] endpointMethodPairs) {
-        Map<String, Set<String>> endpointHttpMethods = new HashMap<>();
-        Arrays.stream(endpointMethodPairs).forEach(pair -> {
-            String[] parts = pair.trim().split(":");
+    private Optional<Entry<Pattern, Set<String>>> findMatchingEndpoint(String requestUri) {
+        return endpointHttpMethods.entrySet().stream()
+                .filter(entry -> entry.getKey().matcher(requestUri).matches())
+                .findFirst();
+    }
+
+    private Map<Pattern, Set<String>> parseEndpointHttpMethods(String endpointsTobeBlackListed) {
+        Map<Pattern, Set<String>> parsedEndpointHttpMethods = new HashMap<>();
+        if (CommonUtils.isNullEmptyOrWhitespace(endpointsTobeBlackListed)) {
+            return parsedEndpointHttpMethods;
+        }
+
+        for (String endpointMethodPair : endpointsTobeBlackListed.split(",")) {
+            if (CommonUtils.isNullEmptyOrWhitespace(endpointMethodPair)) {
+                continue;
+            }
+            String[] parts = endpointMethodPair.trim().split(":");
             String endpointPath = parts[0];
             if (endpointPath.contains("{")) {
                 endpointPath = endpointPath.replaceAll("\\{\\w+\\}", "\\\\w+");
             }
+            Pattern endpointPattern = Pattern.compile(endpointPath);
             if (parts.length == 2) {
-                String httpMethod = parts[1];
-                endpointHttpMethods.computeIfAbsent(endpointPath, k -> new HashSet<>()).add(httpMethod);
+                parsedEndpointHttpMethods.computeIfAbsent(endpointPattern, ignored -> new HashSet<>())
+                        .add(parts[1].trim().toUpperCase(Locale.ROOT));
             } else {
-                endpointHttpMethods.put(endpointPath, Collections.emptySet());
+                parsedEndpointHttpMethods.put(endpointPattern, Set.of());
             }
-        });
-        return endpointHttpMethods;
+        }
+
+        return parsedEndpointHttpMethods;
     }
 
-    private BiPredicate<String, String> getRequestURIMatcher() {
-        return (endpointURI, requestURI) -> {
-            Pattern endpointPattern = Pattern.compile(endpointURI);
-            Matcher requestUriMatcher = endpointPattern.matcher(requestURI);
-            return requestUriMatcher.matches();
-        };
+    private void sendServiceUnavailable(HttpServletResponse response) throws IOException {
+        response.sendError(HttpStatus.SERVICE_UNAVAILABLE.value());
     }
 }
